# Quant-Platform

week-1/project/: NOTES.md  a.out  strategy.s  testing.cpp
week-1/project/include/: histogram.hpp
week-1/project/src/: engine.cpp  null_strategy.cpp  strategy_spec.cpp
week-2/: 01-hot-and-cold-paths.md  02-cache-internals.md  03-locality.md  04-zero-allocation.md  05-compile-time-and-static-polymorphism.md  06-bonus-simd-and-prefetch.md  README.md
week-2/project/: .gitignore  CACHE_SPEC.md  CMakeLists.txt  README.md  TROUBLESHOOTING.md  cache_sim.cpp
week-2/project/data/: gen_trace.py  tiny.stats.json  tiny.trace
week-2/project/harness/: main.cpp
week-2/project/include/: cache_sim.hpp
week-2/project/samples/: cache_sim.stub.cpp
week-2/project/tools/: plot_cache.py
week-2/task_scripts/: gen_graph.py
week-3/: 01-going-wide.md  02-stdthread-basics.md  03-data-races.md  04-false-sharing.md  05-scheduler-and-pinning.md  06-bonus-bandwidth-and-pools.md  README.md
week-3/project/: .gitignore  AGG_SPEC.md  CMakeLists.txt  README.md  TROUBLESHOOTING.md  aggregator.cpp
week-3/project/data/: gen_ticks.py  tiny.agg.json  tiny.ticks
week-3/project/harness/: main.cpp
week-3/project/include/: aggregate.hpp
week-3/project/samples/: aggregator.stub.cpp
week-3/project/tools/: plot_scaling.py
week-4/: 01-from-batch-to-streaming.md  02-atomics-and-the-memory-model.md  03-memory-orderings.md  04-spsc-ring-buffer.md  05-pipeline-pinning-and-backpressure.md  06-bonus-disruptor-and-beyond.md  README.md
week-4/project/: .gitignore  CMakeLists.txt  PIPELINE_SPEC.md  README.md  TROUBLESHOOTING.md  pipeline.cpp
week-4/project/data/: gen_feed.py  tiny.feed  tiny.orders.json
week-4/project/harness/: main.cpp
week-4/project/include/: pipeline.hpp  strategy.hpp
week-4/project/samples/: pipeline.stub.cpp
week-4/project/tools/: plot_latency.py
